# rdma-transport

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  environment.yml
cuda/: Cargo.toml
cuda-sys/: Cargo.toml  build.rs
cuda/src/: lib.rs  types.rs
cuda/src/errors/: mod.rs
cuda/src/macros/: funcs.rs  mod.rs  types.rs
rdma-core/: Cargo.toml
rdma-core-sys/: Cargo.toml  build.rs
rdma-core/src/: lib.rs
rdma-core/src/errors/: mod.rs
rdma-core/src/ibverbs/: mod.rs  types.rs  verbs.rs
rdma-core/src/macros/: funcs.rs  mod.rs  types.rs
rdma-core/src/rdma/: cma.rs  mod.rs  types.rs  verbs.rs
rdma-transport/: Cargo.toml
rdma-transport-py/: Cargo.toml  pyproject.toml
rdma-transport-py/examples/: test_client.py  test_server.py
rdma-transport-py/src/: cuda_ops.rs  lib.rs
rdma-transport-py/src/general/: client.rs  mod.rs  server.rs
rdma-transport-py/src/threading/: client.rs  daemon.rs  mod.rs  server.rs
rdma-transport-py/src/vllm/: client.rs  mod.rs  server.rs
rdma-transport/examples/: list_devices.rs  rdma_client.rs  rdma_server.rs
rdma-transport/src/: lib.rs
rdma-transport/src/buffer/: mod.rs
rdma-transport/src/cuda/: buffer.rs  mod.rs
rdma-transport/src/devices/: mod.rs
rdma-transport/src/errors/: mod.rs
rdma-transport/src/rdma/: client.rs  mod.rs  server.rs
