[package]
name = "rdma-transport-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rdma_transport"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.0"
tokio = { version = "1", features = ["full"] }
oneshot = "0"
rdma-transport = { path = "../rdma-transport" }
