[package]
name = "rdma-transport-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rdma_transport"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.0"
pyo3-log = "0"
log = "0"
tokio = { version = "1", features = ["full"] }
rdma-transport = { path = "../rdma-transport" }
rdma-core = { path = "../rdma-core" }
bincode = "1"
serde = { version = "1", features = ["derive"] }
