[package]
name = "rdma-transport"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
rdma-core-sys = { path = "../rdma-core-sys" }
rdma-core = { path = "../rdma-core" }
cuda-sys = { path = "../cuda-sys" }
cuda = { path = "../cuda" }
libc = "0"
anyhow = "1"
os_socketaddr = "0"
bytes = "1"
thiserror = "1"
tokio = {version = "1", features=["full"]}
bincode = "1"
serde = { version = "1", features = ["derive"] }

